data-xfer/main/default/objects/Data_Source__mdt/Data_Source__mdt.object-meta.xml
<CustomObject>
    <description>Holds the basic information needed to connect to an external data source via web services.</description>
    <label>Data Source</label>
    <pluralLabel>Data Sources</pluralLabel>
</CustomObject>