data-xfer/main/default/objects/Data_Source__mdt/fields/Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Base_Url__c</fullName>
    <description>Holds the base URL (at least the protocol and server, possibly part of the path if it is invariant) to connect to the web service. It can potentially hold variables that the handler class will use to perform a substitution Variables should be of the format {{VARIABLE_NAME}}.</description>
    <label>Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>