data-xfer/main/default/objects/Data_Source__mdt/fields/Handler_Class__c.field-meta.xml
<CustomField>
    <fullName>Handler_Class__c</fullName>
    <label>Handler Class</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>