data-xfer/main/default/objects/Data_Source__mdt/validationRules/name_is_proper_format.validationRule-meta.xml
<ValidationRule>
    <fullName>name_is_proper_format</fullName>
    <active>true</active>
    <description>In order to be able to name all objects uniquely (and in a constructible manner) we need to limit the DeveloperName field. For data source the limit is 4 chars.</description>
    <errorConditionFormula>!REGEX(DeveloperName,&apos;^[a-z0-9]{1,4}$&apos;)</errorConditionFormula>
    <errorMessage>The DeveloperName must be 4 or less lower case or numeric characters</errorMessage>
</ValidationRule>